--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             href="https://fonts.googleapis.com/css?family=Acme|Comfortaa|Orbitron|Righteous&display=swap"
             rel="stylesheet"
         />
-        <title>Document</title>
+        <title>Pomodoro Clock</title>
     </head>
     <body>
         <div id="root"></div>
